# Eggplant_PreOral_Thesis

./: .gitignore  .vercelignore  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle.kts
admin/: README.md  next.config.ts  package-lock.json  package.json  vercel.json
admin/src/: proxy.ts
admin/src/app/: globals.css  layout.tsx  not-found.tsx
admin/src/components/: admin-page-skeleton.tsx  admin-shell.tsx  dashboard.tsx  form-submit-button.tsx  request-review-actions.tsx
admin/src/lib/: action-idempotency.ts  auth.ts  dashboard-data.ts  jpeg-validation.test.ts  jpeg-validation.ts  mobile-api.ts  mobile-validation.test.ts  (+5 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  eggplant_detector_jni.cpp
app/src/main/cpp/detection/: eggplant_ncnn_bridge.cpp
docs/: PROJECT_STRUCTURE.md
gradle/: libs.versions.toml
ml/: README.md
supabase/: config.toml
supabase/migrations/: 20260710092157_production_cloud_schema.sql  20260710092208_seed_bilingual_disease_content.sql  20260710092301_advisor_hardening.sql  20260710122032_explicit_data_api_grants.sql  20260710140500_atomic_cloud_operations.sql  20260710160000_fix_disease_request_rpc_ambiguity.sql  20260710161000_index_global_share_intent_disease.sql  20260711014500_storage_cleanup_outbox.sql  20260711022000_anonymize_content_reports_on_deletion.sql  20260711100000_stabilization_contracts.sql  20260711103000_admin_idempotent_mutations.sql  20260711110000_snapshot_cloud_deletion_and_admin_toggle.sql
tools/model-export/: export_ncnn.py  test_export_ncnn.py
(+254 files in other folders)
